--- a/static/css/petabytz_offer.css
+++ b/static/css/petabytz_offer.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 @page {
     size: 596pt 843pt;
     margin: 0;
@@ -12,7 +14,7 @@
 body {
     -webkit-print-color-adjust: exact;
     print-color-adjust: exact;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Arimo', 'Liberation Sans', Arial, Helvetica, sans-serif;
     background-color: #ffffff;
     color: #000000;
 }
@@ -29,8 +31,9 @@ body {
     padding-right: 88.2pt;
     padding-bottom: 50pt;
     background-color: #ffffff;
-    font-size: 10.5pt;
-    line-height: 1.45;
+    font-size: 10pt;
+    line-height: 1.25;
+    overflow: hidden;
 }
 
 .page:last-of-type {
