--- a/static/css/softstandard_offer.css
+++ b/static/css/softstandard_offer.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 @page {
     size: A4;
     margin: 0;
@@ -9,7 +11,8 @@
 }
 body {
     -webkit-print-color-adjust: exact;
-    font-family: 'Arial', sans-serif;
+    print-color-adjust: exact;
+    font-family: 'Arimo', 'Liberation Sans', 'Arial', sans-serif;
 }
 
 .page {
